# cccc

./: .gitignore  .octocov.complexity.yml  .octocov.yml  BENCHMARK.md  Cargo.toml  README.md
.github/workflows/: ci.yml  complexity.yml  cross-build.yml  release.yml
benchmark/: README.md  eslintrc.json  run.py  setup.sh
complexity-reports/moznion/cccc/complexity/: report.json
coverage-reports/moznion/cccc/: report.json
crates/cccc-c/: Cargo.toml
crates/cccc-c/src/: lib.rs
crates/cccc-cli/: Cargo.toml
crates/cccc-cli/src/: cache.rs  cli.rs  config.rs  lang.rs  lib.rs  output.rs  walk.rs
crates/cccc-cli/tests/: cli.rs  lang_smoke.rs
crates/cccc-cli/tests/fixtures/: sample.c  sample.clj  sample.dart  sample.el  sample.java  sample.kt  sample.lisp  sample.pl  sample.py  sample.swift  sample.zig
crates/cccc-clojure/: Cargo.toml
crates/cccc-clojure/src/: lib.rs
crates/cccc-commonlisp/: Cargo.toml
crates/cccc-commonlisp/src/: lib.rs
crates/cccc-core/src/: engine.rs  ir.rs  report.rs
crates/cccc-dart/: Cargo.toml
crates/cccc-dart/src/: lib.rs
crates/cccc-emacslisp/: Cargo.toml
crates/cccc-emacslisp/src/: lib.rs
crates/cccc-es/: Cargo.toml
crates/cccc-es-cli/: Cargo.toml
crates/cccc-es-cli/src/: main.rs
crates/cccc-es-cli/tests/: cli.rs
crates/cccc-es/src/: lib.rs
crates/cccc-java/: Cargo.toml
crates/cccc-java/src/: lib.rs
crates/cccc-kt/: Cargo.toml
crates/cccc-kt/src/: lib.rs
crates/cccc-lisp/: Cargo.toml
crates/cccc-lisp-core/: Cargo.toml
crates/cccc-lisp-core/src/: clojure.rs  commonlisp.rs  emacslisp.rs  lib.rs  scheme.rs
crates/cccc-lisp-kit/: Cargo.toml
crates/cccc-lisp-kit/src/: lib.rs
crates/cccc-lisp/src/: commonlisp.rs  emacslisp.rs  lib.rs
crates/cccc-php/src/: lib.rs
crates/cccc-pl/: Cargo.toml
crates/cccc-pl/src/: lib.rs
crates/cccc-py/: Cargo.toml
crates/cccc-py/src/: lib.rs
crates/cccc-rb/src/: lib.rs
crates/cccc-rs/: Cargo.toml
crates/cccc-rs/src/: lib.rs
crates/cccc-scheme/: Cargo.toml
crates/cccc-scheme/src/: lib.rs
crates/cccc-swift/: Cargo.toml
crates/cccc-swift/src/: lib.rs
crates/cccc-zig/: Cargo.toml
crates/cccc-zig/src/: lib.rs
docs/: ADDING_A_LANGUAGE.md
src/: analyzer.rs  main.rs  report.rs
