[workspace]
members = ["crates/cccc-core", "crates/cccc-cli", "crates/cccc-es", "crates/cccc-es-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
cccc-core = { path = "crates/cccc-core" }
cccc-cli = { path = "crates/cccc-cli" }
cccc-es = { path = "crates/cccc-es" }
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
