[workspace]
members = [
    "crates/cccc-core",
    "crates/cccc-cli",
    "crates/cccc-es",
    "crates/cccc-rs",
    "crates/cccc-go",
    "crates/cccc-php",
    "crates/cccc-rb",
    "crates/cccc-scheme",
    "crates/cccc-clojure",
    "crates/cccc-lisp-core",
    "crates/cccc-lisp",
    "crates/cccc-kt",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
repository = "https://github.com/moznion/cccc"
homepage = "https://github.com/moznion/cccc"

[workspace.dependencies]
cccc-core = { path = "crates/cccc-core", version = "1.1.0" }
cccc-es = { path = "crates/cccc-es", version = "1.1.0" }
cccc-rs = { path = "crates/cccc-rs", version = "1.1.0" }
cccc-go = { path = "crates/cccc-go", version = "1.1.0" }
cccc-php = { path = "crates/cccc-php", version = "1.1.0" }
cccc-rb = { path = "crates/cccc-rb", version = "1.1.0" }
cccc-scheme = { path = "crates/cccc-scheme", version = "1.1.0" }
cccc-clojure = { path = "crates/cccc-clojure", version = "1.1.0" }
# Façade crates opt into only the dialect features they expose, so this is
# default-features = false at the workspace level (each member adds `features`).
cccc-lisp-core = { path = "crates/cccc-lisp-core", version = "1.1.0", default-features = false }
cccc-lisp = { path = "crates/cccc-lisp", version = "1.1.0" }
cccc-kt = { path = "crates/cccc-kt", version = "1.1.0" }
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
