[package]
name = "cccc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The unified cccc binary: one CLI that measures cognitive/cyclomatic complexity across every bundled language (ECMAScript/TypeScript, Rust, Go, PHP, Ruby, Kotlin, Python, Zig, C)"

[[bin]]
name = "cccc"
path = "src/main.rs"

[dependencies]
cccc-core = { workspace = true }
cccc-es = { workspace = true }
cccc-rs = { workspace = true }
cccc-go = { workspace = true }
cccc-php = { workspace = true }
cccc-rb = { workspace = true }
cccc-scheme = { workspace = true }
cccc-lisp = { workspace = true }
cccc-clojure = { workspace = true }
cccc-kt = { workspace = true }
cccc-py = { workspace = true }
cccc-zig = { workspace = true }
cccc-c = { workspace = true }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
serde = { workspace = true }
serde_json = "1"
toml = "1.1"
rayon = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
