[package]
name = "cccc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The unified cccc binary: one CLI that measures cognitive/cyclomatic complexity across every bundled language (ECMAScript/TypeScript, Rust, Go, PHP, Ruby, Kotlin, Python, Perl, Zig, C, Swift, Java, Dart)"

[[bin]]
name = "cccc"
path = "src/main.rs"

[dependencies]
cccc-core = { workspace = true }
cccc-es = { workspace = true }
cccc-rs = { workspace = true }
cccc-go = { workspace = true }
cccc-php = { workspace = true }
cccc-rb = { workspace = true }
cccc-scheme = { workspace = true }
cccc-lisp = { workspace = true }
cccc-clojure = { workspace = true }
cccc-kt = { workspace = true }
cccc-py = { workspace = true }
cccc-zig = { workspace = true }
cccc-c = { workspace = true }
cccc-pl = { workspace = true }
cccc-swift = { workspace = true }
cccc-java = { workspace = true }
cccc-dart = { workspace = true }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
serde = { workspace = true }
serde_json = "1"
bincode = "1"
toml = "1.1"
rayon = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha1_smol = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
