[package]
name = "cccc-clojure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Clojure adapter that lowers S-expressions into the cccc-core complexity IR"

[dependencies]
# Thin façade: the lowering lives in cccc-lisp-core's `clojure` module. Enable
# only that dialect so consumers pull in just Clojure's code.
cccc-lisp-core = { workspace = true, features = ["clojure"] }
