[package]
name = "cccc-java"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Java (tree-sitter) adapter that lowers source into the cccc-core complexity IR"

[dependencies]
cccc-core = { workspace = true }
tree-sitter = "0.26"
tree-sitter-java = "0.23"
