[package]
name = "cccc-lisp-kit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared lowering kit for the cccc Lisp-family adapters (Scheme, Clojure, Common Lisp, Emacs Lisp, ...)"

[dependencies]
cccc-core = { workspace = true }
lispexp = "0.5"
