[package]
name = "cccc-lisp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lisp-family adapter: Common Lisp, Emacs Lisp, and other Lisp dialects lowered into the cccc-core complexity IR"

[dependencies]
# Thin façade: Common Lisp / Emacs Lisp lowering lives in cccc-lisp-core. This
# crate also exposes a `Dialect` entry point covering Scheme/Clojure, so it
# enables all four dialect features (no separate cccc-scheme/cccc-clojure dep).
cccc-lisp-core = { workspace = true, features = ["scheme", "clojure", "commonlisp", "emacslisp"] }
