[package]
name = "cccc-scheme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Scheme (R7RS-small) + Racket adapter that lowers S-expressions into the cccc-core complexity IR"

[dependencies]
# Thin façade: the lowering lives in cccc-lisp-core's `scheme` module. Enable
# only that dialect so consumers pull in just Scheme's code.
cccc-lisp-core = { workspace = true, features = ["scheme"] }
